base/flask-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-flask-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-flask-backend
  template:
    metadata:
      labels:
        app: demo-flask-backend
    spec:
      containers:
        - name: demo-flask-backend
          image: 447079561480.dkr.ecr.ap-northeast-2.amazonaws.com/team3-flask:73c3edba
          imagePullPolicy: Always
          ports:
            - containerPort: 80
