base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-flask-proxy
  namespace: team3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-flask-proxy
  template:
    metadata:
      labels:
        app: nginx-flask-proxy
    spec:
      nodeSelector:
        nodetype: nginx-node
      containers:
      - name: nginx-flask-proxy
        image: 447079561480.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-flask-proxy:latest
        ports:
        - containerPort: 80
