base/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: team3-flask
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: team3-flask
  type: NodePort
  ports:
    - port: 80 # 서비스가 생성할 포트  
      targetPort: 80 # 서비스가 접근할 pod의 포트
      protocol: TCP
